--- a/src/client/view/index.html
+++ b/src/client/view/index.html
@@ -19,7 +19,7 @@
                 <form class="" onsubmit="return Client.handleSubmit(event)">
                     <input id="name" type="text" name="input" placeholder="Enter the URL">
                     <!-- value="" onblur="onBlur()"  -->
-                    <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return handleSubmit(event)">
+                    <input type="submit" name="" value="Submit" onclick="return Client.handleSubmit(event)" onsubmit="return handleSubmit(event)">
                 </form>
             </section>
             <section id="formResults">
